--- a/index.html
+++ b/index.html
@@ -6,31 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Precious Fernandes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
-    <section id="app">
-        <h1>Apps</h1>
-        <div class="line"></div>
-        <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/g-An6oY3pBjzqugi87ldtLX1MRKaoihkBI9GOekjTIY/embed"></iframe>
+    <div class="container">
 
-        <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/4-olqu6Maw_d-1_RTm-k8xW-W_hPI8VC9mDHxzf_Nuo/embed"></iframe>
-    </section>
+        <section id="app">
+            <h1>Apps</h1>
+            <div class="line"></div>
+            <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/g-An6oY3pBjzqugi87ldtLX1MRKaoihkBI9GOekjTIY/embed"></iframe>
 
-    <section id="game">
-        <h1>Games</h1>
-        <div class="line"></div>
-        <a href="https://studio.code.org/projects/spritelab/FZaMxTUS6VZ9V8qmKIkrjFEcoA-8XaoBso2BRQoOgK8" target="_blank"><img src="Drone.png"></a>
-        <a href="https://studio.code.org/projects/spritelab/x8-F-k9O_AV0O6zTPe3-cdmqmfuA13qIBM9rr8E6H8A" target="_blank"><img src="Float.png"></a>
-    </section>
+            <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/4-olqu6Maw_d-1_RTm-k8xW-W_hPI8VC9mDHxzf_Nuo/embed"></iframe>
+        </section>
 
-    <section id="chatbot">
-        <h1>Chatbot</h1>
-        <div class="line"></div>
-        <iframe allow="microphone;" width="350" height="430" src="https://console.dialogflow.com/api-client/demo/embedded/17e82374-4e8b-4dea-88f1-227ab10a5886">
-        </iframe>
-    </section>
+        <section id="game">
+            <h1>Games</h1>
+            <div class="line"></div>
+            <a href="https://studio.code.org/projects/spritelab/FZaMxTUS6VZ9V8qmKIkrjFEcoA-8XaoBso2BRQoOgK8" target="_blank"><img src="Drone.png"></a>
+            <a href="https://studio.code.org/projects/spritelab/x8-F-k9O_AV0O6zTPe3-cdmqmfuA13qIBM9rr8E6H8A" target="_blank"><img src="Float.png"></a>
+        </section>
+
+        <section id="thunkable">
+            <h1>Thunkable Apps</h1>
+            <div class="line"></div>
+            <div id="myCarousel" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <center>
+                            <a href="https://x.thunkable.com/copy/67c80af411948f23ecff51e0fae207b9" target="_blank">
+                                <img src="Screen%20Shot%202021-03-22%20at%207.31.48%20PM.png" class="img-responsive"></a>
+                            <div class="carousel-content">
+                                <p>ChatApp</p>
+                            </div>
+                        </center>
+                    </div>
+                    <div class="item">
+                        <center>
+                            <a href="https://x.thunkable.com/copy/ea81bc2a6359fe72bcbfd4b65646ce44" target="_blank">
+                                <img src="Screen%20Shot%202021-03-22%20at%207.40.04%20PM.png" class="img-responsive"></a>
+                            <div class="carousel-content">
+                                <p>Anime Background App</p>
+                            </div>
+                        </center>
+                    </div>
+                </div>
+                <a class="left carouosel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+            </div>
+        </section>
+
+        <section id="chatbot">
+            <h1>Chatbot</h1>
+            <div class="line"></div>
+            <iframe allow="microphone;" width="350" height="430" src="https://console.dialogflow.com/api-client/demo/embedded/17e82374-4e8b-4dea-88f1-227ab10a5886">
+            </iframe>
+        </section>
+    </div>
 </body>
 
 </html>
