--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                         </center>
                     </div>
                 </div>
-                <a class="left carouosel-control" href="#myCarousel" data-slide="prev">
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                 </a>
                 <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="glyphicon glyphicon-chevron-right"></span>
                 </a>
             </div>
         </section>
@@ -70,6 +70,4 @@
             </iframe>
         </section>
     </div>
-</body>
-
-</html>
+</body></html>
